--- a/VpdbAgent.Tests/packages.config
+++ b/VpdbAgent.Tests/packages.config
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.NLog41" version="3.3.1" targetFramework="net452" />
-  <package id="coveralls.net" version="0.6.0" targetFramework="net452" />
-  <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
-  <package id="FluentAssertions" version="4.1.1" targetFramework="net452" />
-  <package id="ini-parser" version="2.2.4" targetFramework="net452" />
-  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
-  <package id="NLog" version="4.2.3" targetFramework="net452" />
-  <package id="OpenCover" version="4.6.166" targetFramework="net452" />
+  <package id="coveralls.net" version="0.7.0" targetFramework="net452" developmentDependency="true" />
+  <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net452" />
+  <package id="FluentAssertions" version="4.14.0" targetFramework="net452" />
+  <package id="ini-parser" version="2.3.0" targetFramework="net452" />
+  <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net452" />
+  <package id="Moq" version="4.5.22" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="NLog" version="4.3.9" targetFramework="net452" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net452" />
   <package id="PusherClient" version="0.3.0" targetFramework="net452" />
-  <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
+  <package id="reactiveui-core" version="6.5.2" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
@@ -21,14 +22,14 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net452" />
   <package id="Splat" version="1.6.2" targetFramework="net452" />
-  <package id="squirrel.windows" version="1.2.1" targetFramework="net452" />
-  <package id="WebSocket4Net" version="0.13.1" targetFramework="net452" />
+  <package id="squirrel.windows" version="1.4.4" targetFramework="net452" />
+  <package id="WebSocket4Net" version="0.14.1" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
   <package id="xunit.core" version="2.1.0" targetFramework="net452" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
   <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.NLog" version="1.0.1" targetFramework="net452" />
+  <package id="xunit.NLog" version="1.1.1" targetFramework="net452" />
   <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net452" />
 </packages>
